--- a/src/Artists/Artist.css
+++ b/src/Artists/Artist.css
@@ -4,3 +4,19 @@
     margin: 0px;
 }
 
+.results{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.myresults{
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+.title{
+    padding-bottom: 2.2em;
+    letter-spacing: .1em;
+    text-transform: capitalize;
+}
+
