--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -11,5 +11,15 @@
   margin-top: 1em;
   width: 100%;
   margin-top: 1em;
+  
  
 }
+.fword{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.myfooter{
+  color: seagreen;
+}
+
